--- a/css_basics/Aaron.html
+++ b/css_basics/Aaron.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Aaron Neece</h1>
     
-    <p>Aaron plays the drums for an awesome band called Oceans Orange! They are on their way to the top.</p>
+    <p>Aaron plays the drums for an awesome band called Oceans Orange! They are on their way to the top. Aaron is the best up and coming drummer in Myrtle Beach</p>
     
     <a href="http://reverbnation.com/oceansorange">
         <div>
